# Imp3D

Imp3D/: CMakeLists.txt  ConsoleLogger.cpp  Entities.cpp  Entities.h  Imp3D.cpp
Imp3D/ECS_World/: ComponentBase.cpp  ComponentBase.h  ComponentClass.cpp  ComponentClass.h  Entities.cpp  Entities.h  World.cpp  World.h
OnixEngine/: CMakeLists.txt  OnixEngine.cpp
OnixEngine/shaders/: triangle.frag
